Fix buttons dropping onto new line on firefox

--- a/app/assets/stylesheets/pages/decide-allow-comments-modal.scss
+++ b/app/assets/stylesheets/pages/decide-allow-comments-modal.scss
@@ -44,7 +44,7 @@
             margin-bottom:15px;
             background:$color-1;
             @include width-medium() {
-                width:64%;
+                width:63%;
                 margin-bottom:0;
             }
         }
